repo name updated

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "jarnail/devel",
+    "name": "jarnail93/devel",
     "description": "Beautiful variable dumper.",
     "type": "project",
     "license": "GNU GPL",
